--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5345,6 +5345,19 @@
         </activity>
 
         <activity
+            android:name=".Settings$WirelessDebuggingActivity"
+            android:label="@string/adb_wireless_settings"
+            android:exported="true"
+            android:icon="@drawable/tile_icon_debugging_wireless">
+            <intent-filter android:priority="1">
+                <action android:name="android.settings.WIRELESS_DEBUGGING_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.development.WirelessDebuggingFragment"/>
+        </activity>
+
+        <activity
             android:name="com.android.settings.network.SatelliteWarningDialogActivity"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize|screenLayout|smallestScreenSize"
             android:excludeFromRecents="true"
